--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "vite_react_shadcn_ts",
-  "homepage": "https://bhavyasinghal-lab.github.io/",
+  "homepage": "https://bhavyasinghal-lab.github.io/bhavyasinghal-lab.github.io/",
   "private": true,
   "version": "0.0.0",
   "type": "module",
